Change wedding specific meta data

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-    "name"   : "leslie-eric.us",
-    "version": "1.8.0",
+    "name"   : "@ferrinrachel/getting-married",
+    "version": "0.1.0",
     "private": true,
 
     "dependencies": {
