--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Open Marriage",
-  "description": "The open source website for Leslie Verploegen's and Eric Ferraiuolo's wedding",
+  "name": "Getting Married",
+  "description": "The open source website for R and Z's wedding",
   "keywords": [
     "wedding",
     "website",
