--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name"       : "leslie-eric.us",
-    "description": "The open source website for Leslie Verploegen's and Eric Ferraiuolo's wedding.",
-    "homepage"   : "http://leslie-eric.us/",
-    "version"    : "1.8.0",
+    "name"       : "@ferrinrachel/getting-married",
+    "description": "The open source website for R and Z's wedding.",
+    "homepage"   : "https://rnz.herokuapp.com/",
+    "version"    : "0.1.0",
     "private"    : true,
 
-    "author": "Eric Ferraiuolo <eferraiuolo@gmail.com> (http://ericf.me/)",
+    "author": "Ferri",
 
     "license": "MIT",
 
